# pynldas2

./: .coveragerc  .deepsource.toml  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  README.rst  conftest.py  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
ci/requirements/: environment-dev.yml  environment.yml
pynldas2/: __init__.py  exceptions.py  pynldas2.py
src/pynldas2/: __init__.py  _pools.py  _streaming.py  _utils.py  exceptions.py  pynldas2.py
tests/: test_exceptions.py  test_pynldas2.py  tests.ipynb
