[metadata]
name = pynldas2
description = Get NLDAS2 forcing data.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hyriver/pynldas2
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Typing :: Typed
project_urls =
    Homepage = https://docs.hyriver.io/readme/pynldas2.html
    Issues = https://github.com/hyriver/pynldas2/issues
    CI = https://github.com/hyriver/pynldas2/actions
    Changelog = https://docs.hyriver.io/changelogs/pynldas2.html

[options]
packages = find:
install_requires =
    async-retriever>=0.3.6
    h5netcdf
    numpy>=1.17
    pandas>=1.0
    pygeoutils>=0.13.10
    pyproj>=2.2
    rioxarray>=0.11
    xarray>=2022.03.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    coverage[toml]
    pytest-cov
    pytest-xdist[psutil]
typeguard =
    coverage[toml]
    pygments
    pytest-cov
    pytest-xdist[psutil]
    typeguard

[options.package_data]
pynldas2 =
    py.typed

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503
    D107
    D105
    F401
exclude =
    .eggs
    docs/*.py
    __init__.py
    .ipynb_checkpoints
    tests/*.py
    noxfile.py

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)
